--- a/src/app/activity/components/summary-panel/ascent-descent/ascent-descent.component.css
+++ b/src/app/activity/components/summary-panel/ascent-descent/ascent-descent.component.css
@@ -2,3 +2,13 @@
   padding-left: 3px;
   padding-right: 3px;
 }
+
+.arrow path{
+  fill: #99fac8;
+  stroke: black;
+  stroke-width: 1px;
+}
+
+.arrow:hover path{
+  fill: #ffa9e6;
+}
